Fixing broken Links

--- a/vast/opensetAlgos/Example.ipynb
+++ b/vast/opensetAlgos/Example.ipynb
@@ -28,8 +28,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "mnist_training_data = pd.read_csv('http://dhamija.me/mnist_features/train_mnist.csv')\n",
-    "mnist_testing_data = pd.read_csv('http://dhamija.me/mnist_features/test_mnist.csv')"
+    "mnist_training_data = pd.read_csv('http://vast.uccs.edu/~adhamija/mnist_features/train_mnist.csv')\n",
+    "mnist_testing_data = pd.read_csv('http://vast.uccs.edu/~adhamija/mnist_features/test_mnist.csv')"
    ]
   },
   {
